--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,121 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp">
 
+
+        <TextView
+            android:id="@+id/timer_text_view2"
+            android:layout_width="70dp"
+            android:layout_height="64dp"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="-277dp"
+            android:layout_toStartOf="@+id/start_button"
+            android:background="@color/colorAccent"
+            android:padding="10dp"
+            android:text="0/0"
+            android:textColor="#fff"
+            android:textSize="30sp" />
+
+        <TextView
+            android:id="@+id/timer_text_view3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="26dp"
+            android:layout_marginEnd="-163dp"
+            android:layout_toStartOf="@+id/start_button"
+            android:padding="10dp"
+            android:text="10 + 10"
+            android:textSize="30sp" />
+
+        <Button
+            android:id="@+id/start_button"
+            android:layout_width="207dp"
+            android:layout_height="124dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="175dp"
+            android:background="@color/colorPrimary"
+            android:onClick="start"
+            android:text="Start"
+            android:textColor="#fff"
+            android:textSize="50sp"
+            android:visibility="invisible"
+            tools:layout_editor_absoluteX="89dp"
+            tools:layout_editor_absoluteY="34dp" />
+
+        <TextView
+            android:id="@+id/timer_text_view"
+            android:layout_width="70dp"
+            android:layout_height="64dp"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="2dp"
+            android:layout_toStartOf="@+id/start_button"
+            android:background="@color/colorAccent"
+            android:padding="10dp"
+            android:text="30s"
+            android:textColor="#fff"
+            android:textSize="30sp" />
+
+        <android.support.v7.widget.GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="420dp"
+            android:layout_alignStart="@+id/timer_text_view3"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="-129dp"
+            android:layout_marginTop="90dp">
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_column="0"
+                app:layout_row="0"
+                app:layout_rowWeight="1"
+                app:layout_columnWeight="1"
+                app:layout_gravity="fill"
+                android:text="1" />
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_column="1"
+                app:layout_row="0"
+                app:layout_rowWeight="1"
+                app:layout_columnWeight="1"
+                app:layout_gravity="fill"
+                android:text="2" />
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_column="0"
+                app:layout_row="1"
+                app:layout_rowWeight="1"
+                app:layout_columnWeight="1"
+                app:layout_gravity="fill"
+                android:text="3" />
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_column="1"
+                app:layout_row="1"
+                app:layout_rowWeight="1"
+                app:layout_columnWeight="1"
+                app:layout_gravity="fill"
+                android:text="4" />
+
+        </android.support.v7.widget.GridLayout>
+    </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
