--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
             android:textSize="30sp" />
 
         <TextView
-            android:id="@+id/timer_text_view3"
+            android:id="@+id/question_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
@@ -71,55 +71,58 @@
 
         <android.support.v7.widget.GridLayout
             android:layout_width="match_parent"
-            android:layout_height="420dp"
-            android:layout_alignStart="@+id/timer_text_view3"
+            android:layout_height="418dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="-129dp"
-            android:layout_marginTop="90dp">
+            android:layout_marginStart="0dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginTop="93dp">
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/ans_button_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="1"
                 app:layout_column="0"
-                app:layout_row="0"
-                app:layout_rowWeight="1"
                 app:layout_columnWeight="1"
                 app:layout_gravity="fill"
-                android:text="1" />
+                app:layout_row="0"
+                app:layout_rowWeight="1" />
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/ans_button_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="2"
                 app:layout_column="1"
-                app:layout_row="0"
-                app:layout_rowWeight="1"
                 app:layout_columnWeight="1"
                 app:layout_gravity="fill"
-                android:text="2" />
+                app:layout_row="0"
+                app:layout_rowWeight="1" />
+
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/ans_button_3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="3"
                 app:layout_column="0"
                 app:layout_row="1"
-                app:layout_rowWeight="1"
                 app:layout_columnWeight="1"
                 app:layout_gravity="fill"
-                android:text="3" />
+                app:layout_rowWeight="1" />
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/ans_button_4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="4"
                 app:layout_column="1"
                 app:layout_row="1"
-                app:layout_rowWeight="1"
                 app:layout_columnWeight="1"
                 app:layout_gravity="fill"
-                android:text="4" />
+                app:layout_rowWeight="1" />
 
         </android.support.v7.widget.GridLayout>
     </RelativeLayout>
