--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
 
 
         <TextView
-            android:id="@+id/timer_text_view2"
+            android:id="@+id/score_text_view"
             android:layout_width="70dp"
             android:layout_height="64dp"
             android:layout_alignParentTop="true"
@@ -32,11 +32,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="-163dp"
+            android:layout_marginTop="25dp"
+            android:layout_marginEnd="-154dp"
             android:layout_toStartOf="@+id/start_button"
             android:padding="10dp"
-            android:text="10 + 10"
+            android:text="0 + 0"
             android:textSize="30sp" />
 
         <Button
@@ -71,7 +71,7 @@
 
         <android.support.v7.widget.GridLayout
             android:layout_width="match_parent"
-            android:layout_height="418dp"
+            android:layout_height="317dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
@@ -108,9 +108,9 @@
                 android:layout_height="wrap_content"
                 android:text="3"
                 app:layout_column="0"
-                app:layout_row="1"
                 app:layout_columnWeight="1"
                 app:layout_gravity="fill"
+                app:layout_row="1"
                 app:layout_rowWeight="1" />
 
             <Button
@@ -119,9 +119,9 @@
                 android:layout_height="wrap_content"
                 android:text="4"
                 app:layout_column="1"
-                app:layout_row="1"
                 app:layout_columnWeight="1"
                 app:layout_gravity="fill"
+                app:layout_row="1"
                 app:layout_rowWeight="1" />
 
         </android.support.v7.widget.GridLayout>
