add score counter

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,15 +15,15 @@
 
         <TextView
             android:id="@+id/score_text_view"
-            android:layout_width="70dp"
-            android:layout_height="64dp"
+            android:layout_width="85dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="27dp"
             android:layout_marginEnd="-277dp"
             android:layout_toStartOf="@+id/start_button"
             android:background="@color/colorAccent"
             android:padding="10dp"
-            android:text="0/0"
+            android:text="0/10"
             android:textColor="#fff"
             android:textSize="30sp" />
 
@@ -83,7 +83,9 @@
                 android:id="@+id/ans_button_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="1"
+                android:onClick="selectAns"
+                android:tag="1"
+                android:textSize="50sp"
                 app:layout_column="0"
                 app:layout_columnWeight="1"
                 app:layout_gravity="fill"
@@ -94,7 +96,9 @@
                 android:id="@+id/ans_button_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="2"
+                android:onClick="selectAns"
+                android:tag="2"
+                android:textSize="50sp"
                 app:layout_column="1"
                 app:layout_columnWeight="1"
                 app:layout_gravity="fill"
@@ -106,7 +110,9 @@
                 android:id="@+id/ans_button_3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="3"
+                android:onClick="selectAns"
+                android:tag="3"
+                android:textSize="50sp"
                 app:layout_column="0"
                 app:layout_columnWeight="1"
                 app:layout_gravity="fill"
@@ -117,7 +123,9 @@
                 android:id="@+id/ans_button_4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="4"
+                android:onClick="selectAns"
+                android:tag="4"
+                android:textSize="50sp"
                 app:layout_column="1"
                 app:layout_columnWeight="1"
                 app:layout_gravity="fill"
@@ -125,5 +133,17 @@
                 app:layout_rowWeight="1" />
 
         </android.support.v7.widget.GridLayout>
+
+        <TextView
+            android:id="@+id/notification_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="133dp"
+            android:layout_marginLeft="133dp"
+            android:layout_marginBottom="33dp"
+            android:textSize="30sp" />
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
