--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,12 +18,14 @@
             android:layout_width="85dp"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="27dp"
-            android:layout_marginEnd="-277dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="26dp"
+            android:layout_marginEnd="-276dp"
             android:layout_toStartOf="@+id/start_button"
             android:background="@color/colorAccent"
+            android:gravity="center"
             android:padding="10dp"
-            android:text="0/10"
+            android:text="0/0"
             android:textColor="#fff"
             android:textSize="30sp" />
 
@@ -33,8 +35,9 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_marginTop="25dp"
-            android:layout_marginEnd="-154dp"
+            android:layout_marginEnd="-149dp"
             android:layout_toStartOf="@+id/start_button"
+            android:gravity="fill"
             android:padding="10dp"
             android:text="0 + 0"
             android:textSize="30sp" />
@@ -57,26 +60,27 @@
 
         <TextView
             android:id="@+id/timer_text_view"
-            android:layout_width="70dp"
-            android:layout_height="64dp"
+            android:layout_width="85dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_marginTop="24dp"
-            android:layout_marginEnd="2dp"
+            android:layout_marginEnd="-13dp"
             android:layout_toStartOf="@+id/start_button"
             android:background="@color/colorAccent"
+            android:gravity="center"
             android:padding="10dp"
             android:text="30s"
             android:textColor="#fff"
             android:textSize="30sp" />
 
         <android.support.v7.widget.GridLayout
-            android:layout_width="match_parent"
-            android:layout_height="317dp"
+            android:layout_width="347dp"
+            android:layout_height="293dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="0dp"
-            android:layout_marginLeft="0dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
             android:layout_marginTop="93dp">
 
             <Button
@@ -136,14 +140,36 @@
 
         <TextView
             android:id="@+id/notification_text_view"
+            android:layout_width="256dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="66dp"
+            android:layout_marginLeft="66dp"
+            android:layout_marginEnd="62dp"
+            android:layout_marginRight="62dp"
+            android:layout_marginBottom="72dp"
+            android:gravity="center"
+            android:textSize="30sp" />
+
+        <Button
+            android:id="@+id/play_again_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginStart="133dp"
-            android:layout_marginLeft="133dp"
-            android:layout_marginBottom="33dp"
-            android:textSize="30sp" />
+            android:layout_marginStart="140dp"
+            android:layout_marginLeft="140dp"
+            android:layout_marginEnd="139dp"
+            android:layout_marginRight="139dp"
+            android:layout_marginBottom="19dp"
+            android:onClick="playAgain"
+            android:text="Play Again" />
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
