--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,34 +13,165 @@
         tools:layout_editor_absoluteY="0dp">
 
 
-        <TextView
-            android:id="@+id/score_text_view"
-            android:layout_width="85dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="26dp"
-            android:layout_marginEnd="-276dp"
-            android:layout_toStartOf="@+id/start_button"
-            android:background="@color/colorAccent"
-            android:gravity="center"
-            android:padding="10dp"
-            android:text="0/0"
-            android:textColor="#fff"
-            android:textSize="30sp" />
+        <RelativeLayout
+            android:id="@+id/view_2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="invisible">
 
-        <TextView
-            android:id="@+id/question_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="25dp"
-            android:layout_marginEnd="-149dp"
-            android:layout_toStartOf="@+id/start_button"
-            android:gravity="fill"
-            android:padding="10dp"
-            android:text="0 + 0"
-            android:textSize="30sp" />
+            <TextView
+                android:id="@+id/question_text_view"
+                android:layout_width="130dp"
+                android:layout_height="wrap_content"
+                android:layout_alignStart="@+id/timer_text_view"
+                android:layout_alignLeft="@+id/timer_text_view"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginStart="107dp"
+                android:layout_marginLeft="107dp"
+                android:layout_marginTop="22dp"
+                android:layout_marginEnd="125dp"
+                android:layout_marginRight="125dp"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="0 + 0"
+                android:textSize="30sp" />
+
+            <TextView
+                android:id="@+id/notification_text_view"
+                android:layout_width="256dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="66dp"
+                android:layout_marginLeft="66dp"
+                android:layout_marginEnd="62dp"
+                android:layout_marginRight="62dp"
+                android:layout_marginBottom="72dp"
+                android:gravity="center"
+                android:textSize="30sp" />
+
+            <android.support.v7.widget.GridLayout
+                android:layout_width="347dp"
+                android:layout_height="293dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="93dp">
+
+                <Button
+                    android:id="@+id/ans_button_1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:onClick="selectAns"
+                    android:tag="1"
+                    android:textSize="50sp"
+                    app:layout_column="0"
+                    app:layout_columnWeight="1"
+                    app:layout_gravity="fill"
+                    app:layout_row="0"
+                    app:layout_rowWeight="1" />
+
+                <Button
+                    android:id="@+id/ans_button_2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:onClick="selectAns"
+                    android:tag="2"
+                    android:textSize="50sp"
+                    app:layout_column="1"
+                    app:layout_columnWeight="1"
+                    app:layout_gravity="fill"
+                    app:layout_row="0"
+                    app:layout_rowWeight="1" />
+
+
+                <Button
+                    android:id="@+id/ans_button_3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:onClick="selectAns"
+                    android:tag="3"
+                    android:textSize="50sp"
+                    app:layout_column="0"
+                    app:layout_columnWeight="1"
+                    app:layout_gravity="fill"
+                    app:layout_row="1"
+                    app:layout_rowWeight="1" />
+
+                <Button
+                    android:id="@+id/ans_button_4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:onClick="selectAns"
+                    android:tag="4"
+                    android:textSize="50sp"
+                    app:layout_column="1"
+                    app:layout_columnWeight="1"
+                    app:layout_gravity="fill"
+                    app:layout_row="1"
+                    app:layout_rowWeight="1" />
+
+            </android.support.v7.widget.GridLayout>
+
+            <TextView
+                android:id="@+id/score_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginTop="23dp"
+                android:layout_marginEnd="21dp"
+                android:layout_marginRight="21dp"
+                android:background="@color/colorAccent"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="0/0"
+                android:textColor="#fff"
+                android:textSize="30sp" />
+
+            <TextView
+                android:id="@+id/timer_text_view"
+                android:layout_width="85dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginTop="21dp"
+                android:layout_marginEnd="277dp"
+                android:layout_marginRight="277dp"
+                android:background="@color/colorAccent"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="30s"
+                android:textColor="#fff"
+                android:textSize="30sp" />
+
+            <Button
+                android:id="@+id/play_again_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="140dp"
+                android:layout_marginLeft="140dp"
+                android:layout_marginEnd="139dp"
+                android:layout_marginRight="139dp"
+                android:layout_marginBottom="19dp"
+                android:onClick="playAgain"
+                android:text="Play Again"
+                android:visibility="invisible" />
+        </RelativeLayout>
 
         <Button
             android:id="@+id/start_button"
@@ -54,122 +185,8 @@
             android:text="Start"
             android:textColor="#fff"
             android:textSize="50sp"
-            android:visibility="invisible"
+            android:visibility="visible"
             tools:layout_editor_absoluteX="89dp"
             tools:layout_editor_absoluteY="34dp" />
-
-        <TextView
-            android:id="@+id/timer_text_view"
-            android:layout_width="85dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="-13dp"
-            android:layout_toStartOf="@+id/start_button"
-            android:background="@color/colorAccent"
-            android:gravity="center"
-            android:padding="10dp"
-            android:text="30s"
-            android:textColor="#fff"
-            android:textSize="30sp" />
-
-        <android.support.v7.widget.GridLayout
-            android:layout_width="347dp"
-            android:layout_height="293dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="93dp">
-
-            <Button
-                android:id="@+id/ans_button_1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="selectAns"
-                android:tag="1"
-                android:textSize="50sp"
-                app:layout_column="0"
-                app:layout_columnWeight="1"
-                app:layout_gravity="fill"
-                app:layout_row="0"
-                app:layout_rowWeight="1" />
-
-            <Button
-                android:id="@+id/ans_button_2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="selectAns"
-                android:tag="2"
-                android:textSize="50sp"
-                app:layout_column="1"
-                app:layout_columnWeight="1"
-                app:layout_gravity="fill"
-                app:layout_row="0"
-                app:layout_rowWeight="1" />
-
-
-            <Button
-                android:id="@+id/ans_button_3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="selectAns"
-                android:tag="3"
-                android:textSize="50sp"
-                app:layout_column="0"
-                app:layout_columnWeight="1"
-                app:layout_gravity="fill"
-                app:layout_row="1"
-                app:layout_rowWeight="1" />
-
-            <Button
-                android:id="@+id/ans_button_4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="selectAns"
-                android:tag="4"
-                android:textSize="50sp"
-                app:layout_column="1"
-                app:layout_columnWeight="1"
-                app:layout_gravity="fill"
-                app:layout_row="1"
-                app:layout_rowWeight="1" />
-
-        </android.support.v7.widget.GridLayout>
-
-        <TextView
-            android:id="@+id/notification_text_view"
-            android:layout_width="256dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="66dp"
-            android:layout_marginLeft="66dp"
-            android:layout_marginEnd="62dp"
-            android:layout_marginRight="62dp"
-            android:layout_marginBottom="72dp"
-            android:gravity="center"
-            android:textSize="30sp" />
-
-        <Button
-            android:id="@+id/play_again_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="140dp"
-            android:layout_marginLeft="140dp"
-            android:layout_marginEnd="139dp"
-            android:layout_marginRight="139dp"
-            android:layout_marginBottom="19dp"
-            android:onClick="playAgain"
-            android:text="Play Again" />
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
