--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -141,9 +141,13 @@
                 android:id="@+id/timer_text_view"
                 android:layout_width="85dp"
                 android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
+                android:layout_marginStart="22dp"
+                android:layout_marginLeft="22dp"
                 android:layout_marginTop="21dp"
                 android:layout_marginEnd="277dp"
                 android:layout_marginRight="277dp"
@@ -156,18 +160,18 @@
 
             <Button
                 android:id="@+id/play_again_button"
-                android:layout_width="wrap_content"
+                android:layout_width="138dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="true"
-                android:layout_marginStart="140dp"
-                android:layout_marginLeft="140dp"
-                android:layout_marginEnd="139dp"
-                android:layout_marginRight="139dp"
-                android:layout_marginBottom="19dp"
+                android:layout_marginStart="118dp"
+                android:layout_marginLeft="118dp"
+                android:layout_marginEnd="128dp"
+                android:layout_marginRight="128dp"
+                android:layout_marginBottom="21dp"
                 android:onClick="playAgain"
                 android:text="Play Again"
                 android:visibility="invisible" />
